@@ -12,6 +12,19 @@
 		"downward": "Понижающий",
 		"linear_phase": "Линейная фаза",
 		"split": "Разделение",
+		"splits": {
+			"index": {
+				"split_id": "Раздел №{@id}",
+				"left_id": "Левый №{@id}",
+				"mid_id": "Середина №{@id}",
+				"right_id": "Правый №{@id}",
+				"side_id": "Сторона №{@id}"
+			}
+		},
+		"notes": {
+			"full": "{@id}\n{@frequency} Гц\n{@note}{@octave}{@cents}",
+			"unknown": "{@id}\n{@frequency} Гц"
+		},
 		"split_left": "Разделение левого",
 		"split_middle": "Разделение центра",
 		"split_right": "Разделение правого",
