@@ -12,6 +12,19 @@
 		"downward": "Downward",
 		"linear_phase": "Linear Phase",
 		"split": "Split",
+		"splits": {
+			"index": {
+				"split_id": "Split #{@id}",
+				"left_id": "Left #{@id}",
+				"mid_id": "Mid #{@id}",
+				"right_id": "Right #{@id}",
+				"side_id": "Side #{@id}"
+			}
+		},
+		"notes": {
+			"full": "{@id}\n{@frequency} Hz\n{@note}{@octave}{@cents}",
+			"unknown": "{@id}\n{@frequency} Hz"
+		},
 		"split_left": "Split Left",
 		"split_middle": "Split Mid",
 		"split_right": "Split Right",
