@@ -5,6 +5,7 @@
 === 1.0.16 ===
 * Implemented automatic scale of spectrum graph switch.
 * Aligned the height of the blocks in "cgroup".
+* Implemented split frequency display.
 
 
 === 1.0.15 ===
